# Hacknation-Hackathon

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: sync-hf-space.yml
.streamlit/: config.toml  secrets.example.toml
app/: __init__.py  auth.py  database.py  environment.yml  icons.py  pdf_intake.py  storage.py  streamlit_app.py  supabase_client.py
app/pages_impl/: __init__.py  analysis_view.py  cases.py  common.py  model_info.py  new_analysis.py  (+7 more)
config/: saureus.yaml
db/: drugs_saureus.csv  schema.sql
docs/: DATA_SPEC.md  DECISIONS.md  DEPLOY_HUGGINGFACE.md  DEPLOY_STREAMLIT.md  MODEL_CARD.md  MODEL_SELECTION.md  RESPONSIBLE_AI.md  RISKS.md
models/: 00_OVERVIEW.md  01_logistic_regression_l2.md  02_logistic_regression_l1_elasticnet.md  03_bernoulli_naive_bayes.md  04_linear_svm.md  05_rbf_svm.md  06_random_forest.md  07_extra_trees.md  08_hist_gradient_boosting.md  09_xgboost.md  10_lightgbm.md  11_catboost.md  12_knn.md  13_tabpfn.md  14_explainable_boosting_machine.md  14_mlp_tabular.md  15_tabnet.md  16_ft_transformer.md  17_esm2_embeddings_linear.md  18_esm2_finetune.md  19_nucleotide_transformer.md  20_calibration_methods.md  21_conformal_prediction.md  22_stacking_ensemble.md  23_dnabert2.md  23_soft_voting_ensemble.md  24_hyenadna.md
scripts/: prepare_dnabert2_regions.py  prepare_esm2_fastas.py  resplit_mash.py  setup_amrfinder.sh
tests/: test_amrfinder_runtime.py  test_auth.py  test_model_ensemble.py  test_supabase_client.py
(+58 files in other folders)
