[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-firewall"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "joblib",
  "matplotlib",
  "numpy",
  "pandas",
  "pyarrow",
  "PyYAML",
  "scikit-learn>=1.8",
  "scipy>=1.11",
  "xgboost>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
